--- a/Alomero Housing Software/Alomero Housing Software.csproj
+++ b/Alomero Housing Software/Alomero Housing Software.csproj
@@ -32,8 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LiveCharts, Version=0.9.7.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiveCharts.0.9.7\lib\net45\LiveCharts.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,17 +49,69 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Windows.Forms.HintTextBox">
+      <HintPath>..\packages\TextBox.1.3.12\lib\net45\Windows.Forms.HintTextBox.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="BLL\ClientBLL.cs" />
+    <Compile Include="BLL\EmployeeBLL.cs" />
+    <Compile Include="BLL\UserBLL.cs" />
+    <Compile Include="DAL\EmployeeDAL.cs" />
+    <Compile Include="DAL\UserDAL.cs" />
+    <Compile Include="UI\UserCompanyDetailSettings.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\UserCompanyDetailSettings.Designer.cs">
+      <DependentUpon>UserCompanyDetailSettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\UserEmployee.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\UserEmployee.Designer.cs">
+      <DependentUpon>UserEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\ClientDAL.cs" />
+    <Compile Include="DAL\Functions.cs" />
+    <Compile Include="UI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="UI\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="UI\frmSignIn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmSignIn.Designer.cs">
+      <DependentUpon>frmSignIn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\UserDashboard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\UserDashboard.Designer.cs">
+      <DependentUpon>UserDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\UserNewClient.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\UserNewClient.Designer.cs">
+      <DependentUpon>UserNewClient.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\UserSystemUsers.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\UserSystemUsers.Designer.cs">
+      <DependentUpon>UserSystemUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\UserUpdatePayment.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\UserUpdatePayment.Designer.cs">
+      <DependentUpon>UserUpdatePayment.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="UI\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -64,7 +122,30 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\frmSignIn.resx">
+      <DependentUpon>frmSignIn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\UserCompanyDetailSettings.resx">
+      <DependentUpon>UserCompanyDetailSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\UserDashboard.resx">
+      <DependentUpon>UserDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\UserEmployee.resx">
+      <DependentUpon>UserEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\UserNewClient.resx">
+      <DependentUpon>UserNewClient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\UserSystemUsers.resx">
+      <DependentUpon>UserSystemUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\UserUpdatePayment.resx">
+      <DependentUpon>UserUpdatePayment.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -78,5 +159,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\swift logo.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Female Profile_50px.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
